# python-inquirer3

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: constraints.txt  documentation.yml  pipx_install_helper.py  release.yml  tests.yml
docs/: CODE_OF_CONDUCT.md  conf.py  contributing.md  examples.md  index.md  inquirer3.md  inquirer3.render.console.md  inquirer3.render.md  installation.md  license.md  modules.md  requirements.txt  usage.md
examples/: checkbox.py  checkbox_carousel.py  checkbox_locked.py  checkbox_long.py  checkbox_other.py  checkbox_tagged.py  confirm.py  editor_example.py  ignore.py  list.py  list_carousel.py  list_long.py  list_other.py  list_tagged.py  located.py  mixed.py  password.py  password_echo.py  path.py  pre_answers.py  questions_from_json.py  replacements.py  shortcuts.py  text.py  text_autocomplete.py  theme.py
src/inquirer3/: __init__.py  prompt.py  questions.py  shortcuts.py  themes.py
src/inquirer3/render/: __init__.py
src/inquirer3/render/console/: __init__.py  _checkbox.py  _confirm.py  _editor.py  _list.py  _password.py  _path.py  _text.py  base.py
tests/acceptance/: test_checkbox.py  test_list.py  test_password.py  test_pre_answers.py  test_shortcuts.py  test_text.py  utils.py
tests/integration/console_render/: helper.py  test_basic.py  test_checkbox.py  test_confirm.py  test_editor.py  test_list.py  test_password.py  test_text.py
tests/unit/: test_prompt.py  test_question.py  test_shortcuts.py  test_themes.py
