[project]
name = "inquirer3"
version = "0.0.2"
description = "Collection of common interactive command line user interfaces, based on Inquirer.js"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "guysalt", email = "guy123121@gmail.com" },
    { name = "Miguel Ángel García", email = "miguelangel.garcia@gmail.com" },
]
maintainers = [
    { name = "guysalt", email = "guy123121@gmail.com" },
]
keywords = ["python", "cli", "ui", "prompt", "python3", "inquirer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "blessed>=1.19.0",
    "readchar>=3.0.6",
    "python-editor>=1.0.4",
]

[project.urls]
Homepage = "https://github.com/guysalt/python-inquirer3"
Documentation = "https://python-inquirer3.readthedocs.io/en/latest/"
Repository = "https://github.com/guysalt/python-inquirer3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["inquirer3", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 97

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
